cluster/apps/media/_external_svc/cockpit_storage.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: cockpit
  namespace: media
spec:
  ports:
  - name: "cockpit"
    protocol: "TCP"
    port: 9090
    targetPort: 9090
    nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: cockpit
  namespace: media
subsets:
- addresses:
  - ip: "${STORAGE_ADDRESS}"
  ports:
  - port: 9090
    name: "cockpit"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
  name: cockpit
  namespace: media
spec:
  ingressClassName: "traefik"
  rules:
  - host: "cockpit.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: cockpit
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "cockpit.${SECRET_DOMAIN}"
