cluster/apps/media/_external_svc/qbittorrent_external_svc_ingress.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: qbittorrent
  namespace: media
spec:
  ports:
    - name: "qbittorrent"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: qbittorrent
  namespace: media
subsets:
  - addresses:
      - ip: "${STORAGE_ADDRESS}"
    ports:
      - port: 8080
        name: "qbittorrent"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "traefik.${SECRET_DOMAIN}"
  name: qbittorrent
  namespace: media
spec:
  ingressClassName: "traefik"
  rules:
    - host: "qbittorrent.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "qbittorrent.${SECRET_DOMAIN}"
